[gd_scene load_steps=3 format=2]

[ext_resource path="res://ataques/DumpsterDiving.gd" type="Script" id=1]
[ext_resource path="res://PantallaAtaques.tscn" type="PackedScene" id=2]

[node name="DumpsterDiving" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D2" parent="." instance=ExtResource( 2 )]
[connection signal="Continuar" from="Node2D2" to="." method="_on_Node2D2_Continuar"]
[connection signal="botonN" from="Node2D2" to="." method="_on_Node2D2_botonN"]
[connection signal="botonS" from="Node2D2" to="." method="_on_Node2D2_botonS"]
